update issue, when jump to section by menu and hide headline

--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
+    scroll-padding-top: 104px;
+}
+
+section[id] {
+    scroll-margin-top: 104px;
 }
 
 body{
